# lcurses

./: .gitmodules  .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile.in  NEWS.md  README.md  aclocal.m4  bootstrap.conf  config.h.in  configure  configure.ac  index.html  lcurses-git-1.rockspec  local.mk  rockspec.conf
build-aux/: config.ld.in  sanity-cfg.mk
classes/: curses.chstr.html  curses.window.html
examples/: curses.lua.html
ext/: curses.c
ext/curses/: chstr.c  window.c
ext/include/: _helpers.c
m4/: ax_with_curses.m4
modules/: curses.html
specs/: curses_spec.yaml  spec_helper.lua  specs.mk
